Ajout de POO>main.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ add_subdirectory(Tableaux)
 add_subdirectory(Pointeur)
 add_subdirectory(Flux)
 add_subdirectory(TP_2_Mot_mystere)
+add_subdirectory(POO)
 
 
 add_executable(Cours main.cpp TP_1_Convertisseur_secondes/maths.cpp TP_1_Convertisseur_secondes/maths.h TP_1_Convertisseur_secondes/TP_1.cpp TP_1_Convertisseur_secondes/convertSeconds.cpp TP_1_Convertisseur_secondes/convertSeconds.h Tableaux/calculMoyenne.cpp Tableaux/calculMoyenne.h Tableaux/calculMoyenneVector.cpp Tableaux/calculMoyenneVector.h)
