Création de la class Arme en cours ...

--- a/POO/CMakeLists.txt
+++ b/POO/CMakeLists.txt
@@ -3,4 +3,4 @@ project(POO)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(POO main.cpp class/Personnage.cpp class/Personnage.h)
+add_executable(POO main.cpp class/Personnage.cpp class/Personnage.h class/Arme.cpp class/Arme.h)
