--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ add_subdirectory(Flux)
 add_subdirectory(TP_2_Mot_mystere)
 add_subdirectory(Surcharge_operateurs)
 add_subdirectory(POO)
+add_subdirectory(Experimentation)
+add_subdirectory(TP_3_ZFraction)
 
 
 add_executable(Cours main.cpp TP_1_Convertisseur_secondes/maths.cpp TP_1_Convertisseur_secondes/maths.h TP_1_Convertisseur_secondes/TP_1.cpp TP_1_Convertisseur_secondes/convertSeconds.cpp TP_1_Convertisseur_secondes/convertSeconds.h Tableaux/calculMoyenne.cpp Tableaux/calculMoyenne.h Tableaux/calculMoyenneVector.cpp Tableaux/calculMoyenneVector.h)
