Nouveau chapitre : Heritage p297

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ add_subdirectory(Flux)
 add_subdirectory(TP_2_Mot_mystere)
 add_subdirectory(Surcharge_operateurs)
 add_subdirectory(POO)
+add_subdirectory(Heritage)
 add_subdirectory(Experimentation)
 add_subdirectory(TP_3_ZFraction)
 add_subdirectory(Classes_et_pointeurs)
