--- a/Polymorphisme/CMakeLists.txt
+++ b/Polymorphisme/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Polymorphisme)               # Create project "simple_example"
 set(CMAKE_CXX_STANDARD 14)            # Enable c++14 standard
 
 # Add executable target with source files listed in SOURCE_FILES variable
-add_executable(Polymorphisme main.cpp Vehicules.cpp Vehicules.h)
+add_executable(Polymorphisme main.cpp Vehicules.cpp Vehicules.h Garage.cpp Garage.h)
